--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
-Revision history for Perl HTML::Template::LZE 0.25
-0.25 
+Revision history for Perl HTML::Template::LZE 0.26
+0.26
+        Overwrought Docs and clean up code, fix build System
+
+0.25
         renamed to HTML::Template::LZE
 0.24
        refactoring.
