--- a/README
+++ b/README
@@ -1,6 +1,3 @@
-HTML::Template::LZE version 0.25
-=======================================
-
 INSTALLATION
 
 To install this module type the following:
@@ -14,11 +11,11 @@ To install this module type the following:
 DEPENDENCIES
 
 This module requires these other modules and libraries:
-Test::More => 0.7,
-Module::Build => 0.2808,
-Test::Pod =>  1.26,
-Test::Pod::Coverage =>  0.55,
-CGI::LZE => 0.25,
+Test::More >= 0.7,
+Module::Build >= 0.2808,
+Test::Pod >=  1.26,
+Test::Pod::Coverage >=  0.55,
+CGI::LZE >= 0.25,
 
 
 COPYRIGHT AND LICENCE
